--- a/Django project/myproject/Dockerfile
+++ b/Django project/myproject/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.12.3
+FROM python:slim
 
 # Set the working directory in the container
 WORKDIR /app
