--- a/Django project/myproject/deployment.yaml
+++ b/Django project/myproject/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp-container
-        image: ${DOCKER_USERNAME}/${IMAGE_NAME}:latest
+        image: pipline_docker_image26:latest
         ports:
         - containerPort: 8000
