--- a/Django project/myproject/service.yaml
+++ b/Django project/myproject/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: myapp-service1
 spec:
   selector:
-    app: myapp
+    app: myapp1
   ports:
     - protocol: TCP
       port: 80
