--- a/Django project/myproject/deployment.yaml
+++ b/Django project/myproject/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-deployment
+  name: myapp-deployment1
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: myapp
+      app: myapp1
   template:
     metadata:
       labels:
-        app: myapp
+        app: myapp1
     spec:
       containers:
-      - name: myapp-container
+      - name: myapp-container1
         image: "${DOCKER_USERNAME}/${IMAGE_NAME}:latest"
         ports:
         - containerPort: 8000
