--- a/Django project/myproject/Dockerfile
+++ b/Django project/myproject/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY . /app
 
 # Install any needed dependencies specified in requirements.txt
-RUN pip install --no-cache-dir -r "Django project/myproject/requirements.txt"
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Run app.py when the container launches
 CMD ["python", "manage.py" , "runserver", "0.0.0.0:8000"]
